--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@sap/cds": "5.1.5",
     "@sap/cds-dk": "4.1.5",
+    "@sap/xsenv": "^3.2.2",
+    "@sap/xssec": "^3.2.13",
     "express": "^4",
-    "hdb": "^0.18.3"
+    "hdb": "^0.18.3",
+    "passport": "^0.5.2"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.100.1",
@@ -31,15 +34,15 @@
         "kind": "odata",
         "model": "srv/external/API_BUSINESS_PARTNER",
         "[development]": {
-            "credentials": {
-                "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
-                              }
-                               },
+          "credentials": {
+            "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
+          }
+        },
         "[production]": {
-            "credentials": {
-                 "destination": "API_BUSINESS_PARTNER"
-                      }
-                               }
+          "credentials": {
+            "destination": "API_BUSINESS_PARTNER"
+          }
+        }
       },
       "db": {
         "kind": "sql"
