--- a/approuter/package.json
+++ b/approuter/package.json
@@ -1,7 +1,6 @@
 {
   "name": "approuter",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node node_modules/@sap/approuter/approuter.js"
@@ -13,6 +12,7 @@
     "@sap/approuter": "^11.0.0"
   },
   "engines": {
-    "node": "^14.0.0"
-  }
+    "node": "^12.0.0"
+  },
+  "description": ""
 }
