update according to new trail

--- a/mta.yaml
+++ b/mta.yaml
@@ -9,7 +9,7 @@ build-parameters:
     - builder: custom
       commands:
     #    - npm ci
-        - npx -p @sap/cds-dk cds build --production
+        - cds build --production
 
 modules:
   - name: risk-management-srv
@@ -68,6 +68,8 @@ resources:
     parameters:
       service: hana # or 'hanatrial' on trial landscapes
       service-plan: hdi-shared
+      config:
+        schema: CLD200_DEMO
     properties:
       hdi-service-name: ${service-name}
 
