--- a/approuter/package.json
+++ b/approuter/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sap/approuter": "^11.0.0"
+    "@sap/approuter": "^11.0.1"
   },
   "engines": {
     "node": "^12.0.0"
   },
+  "devDependencies": {},
   "description": ""
 }
