--- a/mta.yaml
+++ b/mta.yaml
@@ -9,7 +9,7 @@ build-parameters:
     - builder: custom
       commands:
     #    - npm ci
-        - cds build --production
+        - npx -p @sap/cds-dk cds build --production
 
 modules:
   - name: risk-management-srv
